--- a/bpi.html
+++ b/bpi.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitcoin Price Index</title>
+    <!--  -->
 </head>
 <body>
     <div class="container">
@@ -14,5 +15,6 @@
     </div>
 
     <script src="bpi.js"></script>
+    <!-- This is a comment -->
 </body>
 </html>
